[package]
name = "communication_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0.137"
bincode = "1.1.3"
chrono = "0.4.19"
bson = "2.3.0"
futures = "0.3.21"
bytes = "1.1.0"
crossbeam = "0.8.2"

[dependencies.mongodb] 
vesion = "2.3.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4"
]
